--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "g": "^2.0.1",
     "json-server": "^1.0.0-alpha.21",
     "lucide-react": "^0.323.0",
-    "next": "14.1.0",
+    "next": "^14.1.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
