--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "sharp": "^0.33.3",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
